Add mimeType and Language support to validation.

--- a/implementations/ruby/resources/base/model/Gemfile
+++ b/implementations/ruby/resources/base/model/Gemfile
@@ -9,6 +9,7 @@ gem 'mongoid'
 gem 'nokogiri'
 gem 'mongoid-history'
 gem 'date_time_precision'
+gem 'bcp47', '~> 0.3.3'
 
 group :test do
   gem 'simplecov', :require => false
