Streamline build process.

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,17 @@
 *.DS_Store
 *.class
+*validation.log
+*fhir-error-dump.txt
 schema
 implementations/*
 !implementations/ruby
 implementations/ruby/output
-.project
+#.project
 ivy/
 publish/
 temp/**
 tools/java/imports/
-implementations/ruby/base/*
+#implementations/ruby/base/*
 tools/java/org.hl7.fhir.tools.core/bin/
 tools/java/org.hl7.fhir.tools.core/.settings/
 tools/java/org.hl7.fhir.instance/bin/
