Added a standalone example converter.

--- a/tools/java/org.hl7.fhir.tools.core/build.xml
+++ b/tools/java/org.hl7.fhir.tools.core/build.xml
@@ -85,14 +85,27 @@
     <java
       dir="../../../"
       classname="org.hl7.fhir.tools.publisher.Publisher"
-      failonerror="true" 
-      fork="true" 
+      failonerror="true"
+      fork="true"
       maxmemory="1024m" >
       <arg line="${args}"/>
       <jvmarg line="-Djava.awt.headless=true"/>
       <classpath refid="org.hl7.fhir.tools.classpath"/>
     </java>
   </target>
+
+  <target name="ExampleConverter" depends="build">
+    <java
+      dir="../../../"
+      classname="org.hl7.fhir.tools.publisher.ExampleConverter"
+      failonerror="true"
+      fork="true"
+      maxmemory="1024m" >
+      <arg line="${args}"/>
+      <jvmarg line="-Djava.awt.headless=true"/>
+      <classpath refid="org.hl7.fhir.tools.classpath"/>
+    </java>
+  </target>  
 
   <!-- define Maven coordinates -->
   <property name="dist" value="mvn-stage" />
