--- a/build.xml
+++ b/build.xml
@@ -37,6 +37,14 @@
     </xslt>
   </target>
 
+  <target name="ExampleConverter" depends="fetch-imports">
+    <ant
+      antfile="build.xml"
+      dir="${tools.location}"
+      inheritAll="true"
+      target="ExampleConverter"/>
+  </target>
+
   <property name="ivy.install.version" value="2.0.0-beta1" />
   <property name="ivy.jar.dir" value="${basedir}/ivy" />
   <property name="ivy.jar.file" value="${ivy.jar.dir}/ivy.jar" />
@@ -54,12 +62,12 @@
     </path>
     <taskdef resource="org/apache/ivy/ant/antlib.xml"
       uri="antlib:org.apache.ivy.ant" classpathref="ivy.lib.path"/>
-  </target>    
+  </target>
 
   <target
     name="fetch-imports"
     unless="offline"
-    depends="install-ivy" 
+    depends="install-ivy"
     description="--> resolve dependencies, compile and run the project">
     <mkdir dir="${imports.location}"/>
     <ivy:resolve transitive="false" file="ivy.xml"/>
@@ -70,7 +78,7 @@
     <delete dir="${ivy.jar.dir}"/>
   </target>
 
-  <target name="clean-cache" depends="install-ivy" 
+  <target name="clean-cache" depends="install-ivy"
     description="--> clean the ivy cache">
     <ivy:cleancache />
   </target>
