--- a/tools/java/org.hl7.fhir.tools.core/.classpath
+++ b/tools/java/org.hl7.fhir.tools.core/.classpath
@@ -29,7 +29,7 @@
 	<classpathentry kind="lib" path="../imports/poi-3.10.1.jar"/>
 	<classpathentry kind="lib" path="../imports/commons-io-1.2.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.hl7.fhir.rdf"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/org.hl7.fhir.implementation"/>
 	<classpathentry kind="lib" path="../imports/Saxon-HE-9.5.1-5.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.hl7.fhir.implementation build"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
