Update ruby generation code.

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,11 @@
 *validation.log
 *fhir-error-dump.txt
 schema
-implementations/*
-!implementations/ruby
 implementations/ruby/output
+implementations/javascript/
+implementations/objectivec/
+implementations/pascal/
+implementations/csharp/
 #.project
 ivy/
 publish/
