Fix failing tests.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ implementations/javascript/
 implementations/objectivec/
 implementations/pascal/
 implementations/csharp/
+implementations/java/org.hl7.fhir.utilities/bin/
 #.project
 ivy/
 publish/
