Fixed bug where some bindings for codes were missing some values in the Ruby models.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ tools/java/imports/
 tools/java/org.hl7.fhir.tools.core/bin/
 tools/java/org.hl7.fhir.tools.core/.settings/
 tools/java/org.hl7.fhir.instance/bin/
+implementations/java/org.hl7.fhir.rdf/bin/
+
